[package]
name = "sweep"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
async-stream = "0.3.5"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "0.11.5"
futures-util = "0.3.30"
indicatif = "0.17.8"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
predicates = "3.1.2"
